tests/invalid/units_discriminator_DU_is_column_density.esm
{
  "esm": "0.8.0",
  "metadata": {
    "name": "UnitsDiscriminatorDUIsColumnDensity",
    "description": "Invalid: `DU` (Dobson unit) is a COLUMN DENSITY (molecules per area, 1/m^2), NOT dimensionless. `bad_dimensionless` is declared dimensionless but its expression is `ozone_column`, in `DU`. A correct binding rejects. A binding that treated `DU` as a dimensionless index ACCEPTS. This is the NEGATIVE half of the discriminator in tests/valid/units_registry_grammar.esm. A VALID fixture can only prove a binding does not FALSELY REJECT; it CANNOT prove the binding checks anything -- mutation testing showed every observed variable in the valid fixture could be corrupted and still pass, because no binding compared a declared unit against the dimension its expression computes. This file makes the same assertion in the contrapositive: a CORRECT binding REJECTS it, and a binding carrying the bug ACCEPTS it. Everything but the one observed variable is dimensionally clean.",
    "authors": [
      "EarthSciML"
    ],
    "created": "2026-07-14T00:00:00Z"
  },
  "models": {
    "BadUnitsModel": {
      "variables": {
        "y": {
          "type": "state",
          "units": "1",
          "description": "State. Dimensionally clean; not part of the defect."
        },
        "k": {
          "type": "parameter",
          "units": "1/s",
          "default": 1.0,
          "description": "Decay rate. Dimensionally clean; not part of the defect."
        },
        "ozone_column": {
          "type": "parameter",
          "units": "DU",
          "default": 1.0,
          "description": "Ozone column: a column density."
        },
        "bad_dimensionless": {
          "type": "observed",
          "units": "1",
          "description": "THE ONLY DEFECT: declared units do not match the dimension its expression computes.",
          "expression": "ozone_column"
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": [
              "y"
            ],
            "wrt": "t"
          },
          "rhs": {
            "op": "*",
            "args": [
              {
                "op": "-",
                "args": [
                  "k"
                ]
              },
              "y"
            ]
          }
        }
      ]
    }
  }
}
